common/force-app/main/default/objects/News_List_Page__c/News_List_Page__c.object-meta.xml
<CustomObject>
    <label>News List Page</label>
    <nameField>
        <displayFormat>LP-{00000}</displayFormat>
        <label>ListPage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News List Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>