common/force-app/main/default/objects/News_List_Page__c/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify if this blog will display under Archive or not.</description>
    <inlineHelpText>Boolean flag to identify if this blog will display under Archive or not.</inlineHelpText>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>