common/force-app/main/default/objects/News_List_Page__c/fields/Blog_Sequesnce__c.field-meta.xml
<CustomField>
    <fullName>Blog_Sequesnce__c</fullName>
    <description>This field is useful for sorting after date, for example, if more than one blog post on the same day,  this is the second filter that gives clients the ability to show blogs in the order they want. sorting should be in descending. This field also determines next blog post</description>
    <inlineHelpText>Blog  sequence number for sorting in descending</inlineHelpText>
    <label>Blog Sequesnce #</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>