common/force-app/main/default/objects/News_List_Page__c/fields/CategoryBanner_Img_Url__c.field-meta.xml
<CustomField>
    <fullName>CategoryBanner_Img_Url__c</fullName>
    <description>Category Image Banner image URL</description>
    <label>CategoryBanner_Img_Url</label>
    <type>Url</type>
</CustomField>