common/force-app/main/default/objects/News_List_Page__c/fields/Likes_Number__c.field-meta.xml
<CustomField>
    <fullName>Likes_Number__c</fullName>
    <label>Likes Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>