common/force-app/main/default/objects/News_List_Page__c/fields/Navigation_url__c.field-meta.xml
<CustomField>
    <fullName>Navigation_url__c</fullName>
    <label>Navigation url</label>
    <type>Url</type>
</CustomField>