common/force-app/main/default/objects/News_List_Page__c/fields/News_Category__c.field-meta.xml
<CustomField>
    <fullName>News_Category__c</fullName>
    <label>News Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>