common/force-app/main/default/objects/News_List_Page__c/fields/News_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>News_Descriptions__c</fullName>
    <label>News Descriptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>