common/force-app/main/default/objects/News_List_Page__c/fields/News_Label__c.field-meta.xml
<CustomField>
    <fullName>News_Label__c</fullName>
    <label>News Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>