common/force-app/main/default/objects/News_List_Page__c/fields/Newsbg_Url__c.field-meta.xml
<CustomField>
    <fullName>Newsbg_Url__c</fullName>
    <label>Newsbg Url</label>
    <type>Url</type>
</CustomField>