common/force-app/main/default/objects/News_List_Page__c/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <description>Contains the corresponding community Page Name.</description>
    <inlineHelpText>Contains the corresponding community Page Name.</inlineHelpText>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>