common/force-app/main/default/objects/News_List_Page__c/fields/Publish_On_Community_Site__c.field-meta.xml
<CustomField>
    <fullName>Publish_On_Community_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to decide if this blog should be visible or not.</description>
    <inlineHelpText>Boolean flag to decide if this blog should be visible or not.</inlineHelpText>
    <label>Publish On Community Site</label>
    <type>Checkbox</type>
</CustomField>