common/force-app/main/default/objects/News_List_Page__c/fields/src_url__c.field-meta.xml
<CustomField>
    <fullName>src_url__c</fullName>
    <description>Source URL</description>
    <label>src url</label>
    <type>Url</type>
</CustomField>