common/force-app/main/default/objects/News_List_Page__c/fields/Tagged_category__c.field-meta.xml
<CustomField>
    <fullName>Tagged_category__c</fullName>
    <description>This is the URL for tagged category on the top corner</description>
    <inlineHelpText>This is the URL for tagged category on the top corner</inlineHelpText>
    <label>Tagged category</label>
    <type>Url</type>
</CustomField>