common/force-app/main/default/objects/News_List_Page__c/listViews/Investor_Hub.listView-meta.xml
<ListView>
    <fullName>Investor_Hub</fullName>
    <columns>NAME</columns>
    <columns>Publish_On_Community_Site__c</columns>
    <columns>Archive__c</columns>
    <columns>Tagged_category__c</columns>
    <columns>src_url__c</columns>
    <columns>News_Category__c</columns>
    <columns>News_Descriptions__c</columns>
    <columns>CategoryBanner_Img_Url__c</columns>
    <columns>News_Label__c</columns>
    <columns>Date__c</columns>
    <columns>Blog_Sequesnce__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>News_Category__c</field>
        <operation>equals</operation>
        <value>Investor Hub</value>
    </filters>
    <label>Investor Hub</label>
</ListView>